# PR-Comfyui_Gemini2-c39817be

./: README.md  __init__.py  cxh_gemini.py  cxh_prompt.py  local_api.py  pyproject.toml
folder/prompt/: 描述图片.txt  故事.txt
web/: custom_Prompt.js
